correcting margin on smaller devices

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -108,7 +108,7 @@
 
   .postcontainer h2 {
     text-align: justify;
-    margin-bottom: 10px;
+    margin: 10px 0;
     font-size: 1.25rem;
     font-weight: 600;
   }
